## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

awl_includedir = $(pkgincludedir)

awl_include_DATA = \
	awl_rand.h\
	awl_checksum.h\
	awl_pool.h\
	awl_pth.h\
	awl_sig.h

EXTRA_DIST = $(awl_include_DATA)
