## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	-I ../include   -D_REENTRANT  -lpthread\
	 -Wall\
	 -g

bin_PROGRAMS = awl

awl_SOURCES = \
	main.c\
	awl_rand.c\
	awl_checksum.c\
	awl_pool.c\
	awl_pth.c\
	awl_sig.c

awl_LDFLAGS = 

awl_LDADD = 

